--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "color-thief-node": "^1.0.4",
     "date-fns": "^2.11.1",
+    "dotenv": "^10.0.0",
     "gray-matter": "^4.0.2",
+    "moment": "^2.29.1",
+    "mongodb": "^3.6.10",
     "next": "^10.0.0",
+    "pg": "^8.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark": "^12.0.0",
-    "remark-html": "^12.0.0"
+    "remark-html": "^12.0.0",
+    "sequelize": "^6.6.5",
+    "spotify-web-api-node": "^5.0.2"
   }
 }
