--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^10.0.0",
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "mongodb": "^3.6.10",
     "next": "^10.0.0",
     "pg": "^8.6.0",
@@ -19,6 +20,7 @@
     "react-dom": "17.0.1",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0",
+    "request": "^2.88.2",
     "sequelize": "^6.6.5",
     "spotify-web-api-node": "^5.0.2"
   }
