--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "spotpage",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "date-fns": "^2.11.1",
     "dotenv": "^10.0.0",
+    "framer-motion": "^5.6.0",
     "gray-matter": "^4.0.2",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
@@ -22,6 +30,7 @@
     "remark-html": "^12.0.0",
     "request": "^2.88.2",
     "sequelize": "^6.6.5",
-    "spotify-web-api-node": "^5.0.2"
+    "spotify-web-api-node": "^5.0.2",
+    "swr": "^0.5.6"
   }
 }
